<resources>
    <string name="app_name">RG2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="begin_2x2">Кубик 2х2</string>
    <string name="advanced_2x2">2х2 Продвинутый</string>
    <string name="begin_3x3">Кубик 3х3</string>
    <string name="other_3x3">Модификации 3х3</string>
    <string name="blind_3x3">3х3 Вслепую</string>
    <string name="blind_acc_3x3">Ускорения слепой сборки</string>
    <string name="addition">Дополнительно:</string>
    <string name="timer_st">Таймер</string>
    <string name="scramble_st">Генератор скрамблов</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_4x4">4x4 Простой метод + Яу</string>
    <string name="pll_game">Тренировка PLL/OLL</string>
    <string name="basic_moves">Азбука вращений</string>
    <string name="st_about">О программе</string>
    <string name="pager_youtube_text">Ссылка на YouTube видео</string>
    <string name="error_player">Ошибка инициализации YouTubePlayer (%1$s)</string>
    <string name="begin_timer_text">0:00.00</string>
    <string name="action_help">Помощь</string>
    <string name="st_thanks">Сказать спасибо</string>
    <string name="azbuka_button">Выбрать азбуку</string>
    <string name="generate_button">Генерировать скрамбл</string>
    <string name="scram_waiting">Ищем подходящий скрамбл</string>
    <string name="content_description">contentDescription</string>
    <string name="buttonScrambleGen">Генерировать скрамбл</string>
    <string name="chkBoxEdgeBuffer">Без переплавки буфера ребер</string>
    <string name="chkBoxCornerBuffer">Без переплавки буфера углов</string>
    <string name="scrambleLengthText">Длина скрамбла:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="defValue">2</string>

    <string name="checkBoxSolveText">Решение:</string>
    <string name="scramble_def_value">R F L B U2 L B\' R F\' D B</string>
    <string name="scramble_def_solve">(А Г Ш Т Р Ц Л З Ж) (Ж П М Ф Б В)</string>
    <string name="scrambleText">Скрамбл:</string>
    <string name="azbukaButtonText">Выбрать азбуку</string>
    <string name="st_exit">Выход</string>
    <string name="title_activity_pll_test_game">PllTestGame</string>
    <string name="pll_test_select_button">Задать свои названия для этапов</string>
    <string name="settings">Настройки</string>
    <string name="fiveStarButtonText">Оценить приложение в GooglePlay</string>
    <string name="content_description_app_loading_image">Пожалуйста подождите</string>
    <string name="commentText">Свой комментарий (алгоритм): </string>
    <string name="pyraminx">Пирамидка (Pyraminx)</string>
    <string name="other_puzzle">Другие головоломки</string>
    <string name="programm_name">RubicsGuide 2 (RG2)</string>
    <string name="support_email">rubicsguide@yandex.ru</string>
    <string name="blind_game">Тренировка Азбуки</string>
    <string name="answers_count">Количество вариантов ответа</string>
    <string name="start_game">Начать игру</string>
    <string name="favoriteSetText"><b>Добавить данный этап в избранное?</b>\n\n
            С комментарием:
    </string>
    <string name="favoriteUnSetText"><b>Удалить данный этап из избранного?</b>
    </string>
    <string name="title_activity_oll_test_game">OllTestGame</string>
    <string name="oll_game">Угадай OLL</string>
    <string name="pll_2side">PLL по двум сторонам</string>
    <string name="pll_3side">PLL по трем сторонам</string>
    <string name="rb_oll_game">OLL по двум сторонам</string>
    <string name="timerText">Таймер</string>
    <string name="help_bondarenko">Очень простой способ сборки кубика пиф-пафами.</string>
    <string name="big_cubes">Большие кубы (4х4 и т.д.)</string>
    <string name="subscibeButton">Подписаться на канал в youtube</string>
    <string name="searchTextViewText">Что ищем?</string>
    <string name="searchExamlpeHint">например, pll</string>
    <string name="subscibeText">Понравилось приложение? Подпишитесь на мой канал в Youtube.</string>
    <string name="subscibeOK">Подписаться</string>
    <string name="subscibeNotOK">Спасибо, уже подписался</string>
    <string name="remindMeLater">Напомнить позже</string>
    <string name="cubemarket">Купить головоломки</string>

</resources>
