<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_azbuka"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/azbukaButtonText"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_generate"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonScrambleGen"
            android:textSize="12sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBox_edges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chkBoxEdgeBuffer" />
                <CheckBox
                    android:id="@+id/checkBox_corners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chkBoxCornerBuffer" />
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scrambleLengthText"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/textView"/>

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintRight_toLeftOf="@+id/scrambleLength"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/scrambleLength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="14"
                    app:layout_constraintRight_toLeftOf="@+id/button_plus"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button_plus"
                    android:layout_marginRight="8dp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintRight_toRightOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/scramble_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:text="@string/scrambleText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/scramble"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scramble_def_value"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/scramble_textView"
                    app:layout_constraintTop_toTopOf="@+id/scramble_textView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_optimizationLevel="basic"
                    android:layout_marginStart="8dp" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <GridView
                    android:id="@+id/scram_gridView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="h,4:3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:horizontalSpacing="1dp"
                    android:verticalSpacing="1dp"
                    android:numColumns="12"
                    android:stretchMode="columnWidth"
                    tools:ignore="NestedScrolling">
                </GridView>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </ProgressBar>

                <TextView
                    android:id="@+id/progressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scram_waiting"
                    android:padding="@dimen/small_padding"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/checkBox_solve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkBoxSolveText"/>

                <TextView
                    android:id="@+id/solve_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/scramble_def_solve"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/checkBox_solve"/>

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
